--- a/make/Makefile
+++ b/make/Makefile
@@ -18,12 +18,12 @@
 
 
 proj_root ?= $(CURDIR)/..
+bench_root ?= $(proj_root)/bench
 
 include $(proj_root)/make/Makefile.common
-CPLUS := $(compiler) $(COMPILER_NOLOGO_KEY) $(USE_SHARED_CPPRUNTIME_KEY)
 
 .SECONDARY:
-.PHONY: clean clean_all clean_pstl bench
+.PHONY: clean clean_all clean_pstl bench test
 
 PSTL_MAKEFILE = $(proj_root)/make/Makefile.pstl
 BENCH_MAKEFILE = $(proj_root)/make/Makefile.bench
@@ -31,27 +31,64 @@ BENCH_MAKEFILE = $(proj_root)/make/Makefile.bench
 recursive_wildcard = $(wildcard $(1)$(2)) $(foreach d,$(wildcard $(1)*),$(call recursive_wildcard,$(d)/,$(2)))
 
 test_hdr = $(wildcard $(proj_root)/test/support/*.h)
-test_src = $(call recursive_wildcard,$(proj_root)/test/,*.pass.cpp)
+test_src_all = $(call recursive_wildcard,$(proj_root)/test/,*.pass.cpp)
+ifdef exclude_test_dirs
+    ifdef include_test_dirs
+        $(error Simultaneous use of 'exclude_test_dirs' 'include_test_dirs' options is not allowed)
+    endif
+    full_paths = $(addprefix $(proj_root)/test/, $(exclude_test_dirs))
+    test_src = $(filter-out $(addsuffix /%, $(full_paths)), $(test_src_all))
+endif
+ifdef include_test_dirs
+    full_paths = $(addprefix $(proj_root)/test/, $(include_test_dirs))
+    test_src = $(filter $(addsuffix /%, $(full_paths)), $(test_src_all))
+endif
+test_src ?= $(test_src_all)
 test_bin = $(notdir $(test_src:.cpp=.exe))
 VPATH += $(sort $(dir $(test_src)))
 
 all: $(test_bin)
 
-test_%.offload.exe: test_%.offload$(OBJ_SFX) exception_list.offload$(OBJ_SFX)
-	$(CPLUS) $(CPLUS_FLAGS) $^ $(FKEY)o$@ $(LDFLAGS)
-
 $(PSTL_LIB_NAME):
 	$(MAKE) -f $(PSTL_MAKEFILE) backend=$(backend) cfg=$(cfg)
+
+ifneq (,$(filter $(backend), tbb serial))
+
+ifeq (,$(filter $(compiler), dpcpp dpc++))
+test_%.offload.exe: test_%.offload$(OBJ_SFX) exception_list.offload$(OBJ_SFX)
+	$(CPLUS) $(CPLUS_FLAGS) $^ $(FKEY)o$@ $(LDFLAGS)
 
 %.pass.exe: %.pass$(OBJ_SFX) $(PSTL_LIB_NAME)
 	$(info LIBRARY_PATH=$(LIBRARY_PATH))
 	$(LD) $< $(LD_OUT_KEY)$@ $(LDFLAGS) $(DYN_LDFLAGS) $(PSTL_LIB_LINK)
 
+%.pass$(OBJ_SFX): %.pass.cpp $(test_hdr) $(proj_root)/make/Makefile
+	$(CPLUS) $(CPLUS_FLAGS) $(KEY)c $< $(FKEY)o$@
+else
+%.pass.exe: %.pass.cpp $(PSTL_LIB_NAME) $(test_hdr) $(proj_root)/make/Makefile
+	$(CPLUS) $(CPLUS_FLAGS) $(LDFLAGS) $(DYN_LDFLAGS) $(PSTL_LIB_LINK) $<
+endif
+
+else ifneq (,$(filter $(backend), sycl sycl_only))
+
+ifeq ($(device_type), FPGA)
+%.pass.exe: %.pass.cpp $(PSTL_LIB_NAME) $(test_hdr) $(proj_root)/make/Makefile
+	$(CPLUS) $(CPLUS_FLAGS) $(DEVICE_COMPILE_FLAGS) $(KEY)c $< $(FKEY)o $@.o
+	$(CPLUS) $(CPLUS_FLAGS) $(DEVICE_COMPILE_FLAGS) $(DYN_LDFLAGS) $@.o $(FKEY)o $@ $(DEVICE_LINK_FLAGS) $(PSTL_LIB_LINK)
+else
+%.pass.exe: %.pass.cpp $(PSTL_LIB_NAME) $(test_hdr) $(proj_root)/make/Makefile
+ifeq ($(os_name), windows)
+	$(CPLUS) $(CPLUS_FLAGS) $(DEVICE_COMPILE_FLAGS) $(LDFLAGS) $(DYN_LDFLAGS) $(DEVICE_LINK_FLAGS) $(PSTL_LIB_LINK) $<
+else
+	$(CPLUS) $(CPLUS_FLAGS) $(DEVICE_COMPILE_FLAGS) $(LDFLAGS) $(DYN_LDFLAGS) $(DEVICE_LINK_FLAGS) $(PSTL_LIB_LINK) $< $(FKEY)o$@
+endif
+
+endif # fpga device
+
+endif # non-tbb backend
+
 %.pass: %.pass.exe
 	$(run_cmd) $(RUN_CMD)$*.pass.exe
-
-%.pass$(OBJ_SFX): %.pass.cpp $(test_hdr) $(proj_root)/make/Makefile
-	$(CPLUS) $(CPLUS_FLAGS) -c $< $(FKEY)o$@
 
 # This definition intentionally consists of two blank lines
 define eol
@@ -70,17 +107,14 @@ test: $(test_bin)
 
 algo_target ?= algorithm.json
 
-TEMPLATE_FILES=$(wildcard $(proj_root)/bench/*.*tmpl)
-BENCH_COMMON_FILES=$(wildcard $(proj_root)/bench/*.h) $(wildcard $(proj_root)/bench/*.cpp)
+TEMPLATE_FILES=$(wildcard $(bench_root)/*.*tmpl)
+BENCH_COMMON_FILES=$(wildcard $(bench_root)/*.h) $(wildcard $(bench_root)/*.cpp)
 
-$(BENCH_MAKEFILE): $(proj_root)/bench/$(algo_target) $(proj_root)/bench/gen.py  $(TEMPLATE_FILES)
-	$(PYTHON) $(proj_root)/bench/gen.py $(proj_root)/bench/$(algo_target)
+$(BENCH_MAKEFILE): $(bench_root)/$(algo_target) $(bench_root)/gen.py  $(TEMPLATE_FILES)
+	$(PYTHON) $(bench_root)/gen.py $(bench_root)/$(algo_target)
 
 bench : $(BENCH_MAKEFILE) $(BENCH_COMMON_FILES) $(PSTL_LIB_NAME)
-	@echo     TEMPLATE_FILES=$(TEMPLATE_FILES)
-	@echo     proj_root=$(proj_root)
-	ls -la      $(proj_root)/bench/gen.py
-	$(MAKE) -f $(BENCH_MAKEFILE)
+	$(MAKE) -f $(BENCH_MAKEFILE) bench_root=$(bench_root) proj_root=$(proj_root)
 
 clean_bench:
 	$(DEL_CMD) $(BENCH_MAKEFILE)
@@ -88,7 +122,7 @@ clean_bench:
 	$(DEL_CMD) $(proj_root)/make/bench/*.*
 
 clean:
-	$(DEL_CMD) *$(OBJ_SFX) *.exe *.E *.s *.asm *.d *.pdb *.pdb *.suo *.ilk
+	$(DEL_CMD) *$(OBJ_SFX) *.exe *.E *.s *.asm *.d *.pdb *.pdb *.suo *.ilk *.o *.spv *.aocx
 
 clean_pstl:
 	$(MAKE) -f $(PSTL_MAKEFILE) clean
