--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,7 @@ macro(onedpl_add_test test_source_file)
     add_executable(${_test_name} "${test_source_file}")
     target_compile_definitions(${_test_name} PRIVATE _PSTL_TEST_SUCCESSFUL_KEYWORD=1)
     if (MSVC)
-        target_compile_options(${_test_name} PRIVATE /bigobj /EHsc)
+        target_compile_options(${_test_name} PRIVATE /bigobj)
     endif()
     target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
     target_link_libraries(${_test_name} PRIVATE oneDPL test_support)
