CMake/make: fix after renaming test/pstl_testsuite
Signed-off-by: Veprev, Alexey <alexey.veprev@intel.com>

--- a/make/Makefile
+++ b/make/Makefile
@@ -30,7 +30,7 @@ BENCH_MAKEFILE = $(proj_root)/make/Makefile.bench
 
 recursive_wildcard = $(wildcard $(1)$(2)) $(foreach d,$(wildcard $(1)*),$(call recursive_wildcard,$(d)/,$(2)))
 
-test_hdr = $(wildcard $(proj_root)/test/pstl_testsuite/support/*.h)
+test_hdr = $(wildcard $(proj_root)/test/support/*.h)
 test_src_all = $(call recursive_wildcard,$(proj_root)/test/,*.pass.cpp)
 ifdef exclude_test_dirs
     ifdef include_test_dirs
